--- a/env_config/kdd_dl_env.yaml
+++ b/env_config/kdd_dl_env.yaml
@@ -1,9 +1,23 @@
 name: kdd_dl
 channels:
+  - anaconda
   - defaults
 dependencies:
-  - blas=1.0=mkl
+  - asn1crypto=0.24.0=py37_0
+  - ca-certificates=2018.03.07=0
   - certifi=2018.8.24=py37_1
+  - cffi=1.11.5=py37h74b6da3_1
+  - cryptography=2.3.1=py37h74b6da3_0
+  - idna=2.7=py37_0
+  - libprotobuf=3.6.0=h1a1b453_0
+  - mysql-connector-c=6.1.11=hf3e53a5_0
+  - mysql-connector-python=8.0.12=py37h7a5b8d5_0
+  - openssl=1.0.2p=hfa6e2cd_0
+  - protobuf=3.6.0=py37he025d50_0
+  - pycparser=2.18=py37_1
+  - pymysql=0.9.2=py37_0
+  - zlib=1.2.11=h8395fce_2
+  - blas=1.0=mkl
   - icc_rt=2017.0.4=h97af966_0
   - intel-openmp=2018.0.3=0
   - mkl=2018.0.3=1
